--- a/package.json
+++ b/package.json
@@ -2,16 +2,36 @@
   "name": "jarrodmedranocom",
   "version": "0.0.55",
   "main": "index.js",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "next": "12.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-is": "^17.0.2"
+    "@material-ui/core": "^4.11.0",
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "@sendgrid/mail": "^7.7.0",
+    "@types/node": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.6",
+    "drei": "0.0.60",
+    "fontfaceobserver": "^2.1.0",
+    "next": "9.4.4",
+    "next-seo": "^4.7.3",
+    "react": "^18.2.0",
+    "react-dom": "16.13.1",
+    "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.1.1",
+    "react-iframe": "^1.8.0",
+    "react-three-fiber": "4.2.12",
+    "three": "0.123.0",
+    "twind": "^0.16.17",
+    "typescript": "^4.7.4",
+    "vercel": "^19.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18",
-    "bun-framework-next": "^12",
-    "typescript": "latest",
-    "react-refresh": "0.10.0"
+    "@parcel/transformer-typescript-tsc": "^2.0.1",
+    "next-transpile-modules": "3.3.0"
   }
 }
