--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@nextui-org/react": "^1.0.0-beta.9",
-    "@sendgrid/mail": "^7.7.0",
-    "@types/node": "^18.0.5",
-    "@types/react": "^18.0.15",
-    "classnames": "^2.2.6",
-    "cross-fetch": "^3.0.6",
+    "@nextui-org/react": "^2.2.9",
+    "@sendgrid/mail": "^8.1.0",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
+    "classnames": "^2.3.2",
+    "cross-fetch": "^4.0.0",
     "drei": "0.0.60",
-    "fontfaceobserver": "^2.1.0",
-    "next": "9.4.4",
-    "next-seo": "^4.7.3",
+    "fontfaceobserver": "^2.3.0",
+    "next": "14.0.4",
+    "next-seo": "^6.4.0",
     "react": "^18.2.0",
-    "react-dom": "16.13.1",
-    "react-google-recaptcha": "^2.1.0",
-    "react-hook-form": "^7.1.1",
-    "react-iframe": "^1.8.0",
+    "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.49.2",
+    "react-iframe": "^1.8.5",
     "react-three-fiber": "4.2.12",
-    "three": "0.123.0",
-    "twind": "^0.16.17",
-    "typescript": "^4.7.4",
-    "vercel": "^19.2.0"
+    "three": "0.159.0",
+    "twind": "^0.16.19",
+    "typescript": "^5.3.3",
+    "vercel": "^32.7.1"
   },
   "devDependencies": {
-    "@parcel/transformer-typescript-tsc": "^2.0.1",
-    "next-transpile-modules": "3.3.0"
+    "@parcel/transformer-typescript-tsc": "^2.10.3",
+    "next-transpile-modules": "10.0.1"
   }
 }
