--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
     "@nextui-org/react": "^2.2.9",
     "@sendgrid/mail": "^8.1.0",
     "@types/node": "^20.10.4",
@@ -19,7 +18,7 @@
     "fontfaceobserver": "^2.3.0",
     "next": "14.0.4",
     "next-seo": "^6.4.0",
-    "react": "^18.2.0",
+    "react": ">=16.8.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.2",
@@ -28,7 +27,7 @@
     "three": "0.159.0",
     "twind": "^0.16.19",
     "typescript": "^5.3.3",
-    "vercel": "^32.7.1"
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@parcel/transformer-typescript-tsc": "^2.10.3",
