--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.49.2",
     "react-iframe": "^1.8.5",
-    "twind": "^0.16.19",
-    "typescript": "^5.3.3",
+    "twind": "0.16.19",
+    "typescript": "5.3.3",
     "vercel": "^32.3.0"
   },
   "devDependencies": {
