--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "@parcel/transformer-typescript-tsc": "^2.10.3",
     "eslint": "^8.55.0",
     "next-transpile-modules": "10.0.1"
-  }
+  },
+  "packageManager": "^yarn@1.22.19"
 }
